# fighters-legacy

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  REUSE.toml  SECURITY.md  SUPPORT.md  cliff.toml  codecov.yml
engine/: CMakeLists.txt
engine/ai/: AiControllerFactory.h  CMakeLists.txt  LoiterController.cpp  StateMachineController.cpp  StateMachineController.h
engine/audio/: MusicManager.cpp  MusicManager.h  OggDecoder.cpp  OggDecoder.h  PlaylistLoader.cpp  PlaylistLoader.h  SubtitleQueue.cpp  SubtitleQueue.h  VoiceCalloutManager.cpp  VoiceCalloutManager.h  ogg_impl.c  ogg_impl.h
engine/config/: AccessibilitySettings.h  AudioSettings.h  ConfigFile.cpp  ConfigFile.h  ControlsSettings.h  DifficultySettings.h  GraphicsSettings.h  UserConfig.cpp  UserConfig.h
engine/console/: CommandShell.cpp  CommandShell.h  GameConsole.cpp  GameConsole.h
engine/content/: AssetManager.cpp  AssetManager.h  AssetTypes.h  FolderContentPack.cpp  FolderContentPack.h  IContentPack.h
engine/crash/: CrashReporter.cpp
engine/debug/: DebugCommandRegistry.cpp  DebugCommandRegistry.h  DebugCommands.cpp  DebugCommands.h  DebugConsole.cpp  DebugConsole.h
engine/difficulty/: DifficultyMultipliers.cpp  DifficultyMultipliers.h
engine/entity/: DamageDef.h  EntityDef.h  EntityDefParser.cpp  EntityDefParser.h  EntityEvent.h  EntityId.h  EntityManager.cpp  EntityManager.h  EntityPool.cpp  EntityPool.h  EntityState.h  EntityTypeRegistry.cpp  EntityTypeRegistry.h  IEntityController.h  ObjectCategory.h
engine/firstrun/: FirstRun.cpp  FirstRun.h
engine/flight/: AeroForces.cpp  AeroForces.h  Atmosphere.cpp  Atmosphere.h  BuiltinFlightModel.h  CentralGravityField.h  FixedWingForceModel.cpp  FixedWingForceModel.h  FlightIntegrator.cpp  FlightIntegrator.h  FlightModelData.h  FlightModelParser.cpp  FlightModelParser.h  Geodetic.h  IForceModel.h  IGravityField.h
engine/i18n/: Localization.cpp  Localization.h  StringTable.cpp  StringTable.h
engine/input/: AxisConfig.cpp  AxisConfig.h  Binding.h  InputAction.h  InputBindings.cpp  InputBindings.h
engine/loop/: GameLoop.cpp  GameLoop.h  GameState.h
engine/math/: Table1D.h  Table2D.h
engine/net/: AuthTracker.h  DiscoveryBeacon.h  DiscoveryListener.cpp  DiscoveryListener.h  GameProtocol.h  SnapshotCodec.cpp  SnapshotCodec.h  SnapshotScheduler.cpp  SnapshotScheduler.h  TickGovernor.cpp  TickGovernor.h  WireCodec.h  WorldBroadcaster.cpp  WorldBroadcaster.h
engine/perf/: PerformanceOverlay.cpp  PerformanceOverlay.h  ServerTickReport.h  Stats.h  TickProfiler.h
engine/render/: BuiltinGeometry.cpp  BuiltinGeometry.h  CameraController.cpp  CameraController.h  FlightHud.cpp  FlightHud.h  ParticleSystem.cpp  ParticleSystem.h  ProceduralTerrainChunk.cpp  ProceduralTerrainChunk.h  SceneRenderer.cpp  SceneRenderer.h  TerrainChunkIO.cpp  TerrainChunkIO.h  TerrainManifest.h  TerrainMeshBuilder.cpp  TerrainStreamer.cpp  TerrainStreamer.h  WindshieldRain.cpp  WindshieldRain.h
engine/sandbox/: SandboxInspector.cpp  SandboxInspector.h
engine/script/: LuaController.cpp  LuaController.h  LuaSandbox.cpp  LuaSandbox.h
engine/weather/: WeatherController.cpp  WeatherController.h  WeatherTypes.h
game/fighters-legacy/: CMakeLists.txt  CameraInput.cpp  CameraInput.h  ClientNetEventHandler.cpp  ClientNetEventHandler.h  FlightInputCollector.cpp  FlightInputCollector.h  FlightScreen.cpp  Game.cpp  HapticController.cpp  HapticController.h  LoadingScreen.cpp  LoadingScreen.h  LocalServer.cpp  ScreenManager.cpp  ScreenManager.h  ServerNotice.h  SessionStatus.h  SettingsScreen.cpp  SettingsScreen.h  main.cpp
platform/: CMakeLists.txt  IAsyncFilesystem.h  IAudio.h  IAudioSynthesizer.h  IClock.h  IFilesystem.h  IInput.h  ILogger.h  INetwork.h  IRenderer.h  IWindow.h  IWindowEventHandler.h  Platform.h  RenderTypes.h  Utf8Decode.h
platform/net/: CMakeLists.txt  ENetNetwork.cpp  ENetNetwork.h
platform/openal/: CMakeLists.txt  OALAudio.cpp  OALAudio.h
platform/sdl3/: CMakeLists.txt  SDL3AsyncFilesystem.cpp  SDL3AsyncFilesystem.h  SDL3EventSink.h  SDL3Input.cpp  SDL3Input.h  SDL3Window.cpp  SDL3Window.h
platform/vulkan/: CMakeLists.txt  UnifontBitmap.h  VkRenderer.cpp  VkRenderer.h  VkResources.cpp  VkResources.h  VkWindow.cpp  VkWindow.h
server/fl-server/: AdminConsole.cpp  AdminConsole.h  CMakeLists.txt  RconServer.cpp  RconServer.h  ServerCommands.cpp  ServerCommands.h  main.cpp  server_config.cpp  server_config.h
tests/: CMakeLists.txt  mock_hal.h  mock_network.h  test_admin_console.cpp  test_aero_forces.cpp  test_ai_controllers.cpp  test_async_filesystem.cpp  test_async_filesystem_sdl3.cpp  test_atmosphere.cpp  test_audio.cpp  test_bot_swarm.cpp  test_central_gravity.cpp  test_client_net_event_handler.cpp  test_command_shell.cpp  test_config_file.cpp  test_content_system.cpp  test_crash_reporter.cpp  test_debug_console.cpp  test_difficulty.cpp  test_entity.cpp  test_firstrun.cpp  test_flight_hud.cpp  test_flight_input_collector.cpp  test_flight_integrator.cpp  test_flight_model_parser.cpp  test_force_model.cpp  test_game_protocol.cpp  test_gen_terrain_chunks.py  test_gen_unifont_header.py  test_geodetic.cpp  test_haptic_controller.cpp  test_input.cpp  test_input_hal.cpp  test_lan_discovery.cpp  test_loading_screen.cpp  test_localization.cpp  test_loop.cpp  test_lua_controller.cpp  test_music_manager.cpp  test_network.cpp  (+31 more)
tools/: CMakeLists.txt  blender_gen.py  gen_builtin_glb.py  gen_terrain_chunks.py  gen_unifont_header.py
tools/audio_check/: main.cpp
tools/audio_test/: main.cpp
tools/bot_swarm/: BotClient.cpp  BotClient.h  IFlightPattern.h  SwarmConfig.h  SwarmMetrics.h  main.cpp  run_loadtest.ps1  run_loadtest.sh  scale-gate-baseline.json  scale-gate.json  scale_gate.py
tools/common/: NetStats.h
tools/fl-server/: main.cpp  server_config.cpp  server_config.h
tools/hello_triangle/: main.cpp
tools/input_check/: main.cpp
tools/latency_analysis/: compare.py  measure_linux.sh  measure_macos.sh  measure_windows.ps1
(+91 files in other folders)
